# barista2

./: .gitignore  .gitmodules  CMakeLists.txt  analysis_options.yaml  api.cpp  api.h  barista2.cbp  build.sh  common.h  diff.cpp  diff.h  emscripten-preamble-patch.js  giant.cpp  giant.wasm.html  html.cpp  html.h  main.asm.html  main.cpp  main.css  main.html  main.wasm.html  precise_time.cpp  pubspec.yaml  style.cpp  style.h  sync.cpp  sync.h  sync.js  test.cpp  test.h  test_all.cpp  test_giant.cpp  todo.cpp  todo.css  todo.html  todo_test.cpp  todo_widgets.cpp  todo_widgets.h
lib/src/: cpp_generator.dart  generator.dart  inferno_generator.dart  ng2d_generator.dart  ng2ts_generator.dart
ng2ts/giant/: .angular-cli.json  README.md  package.json
ng2ts/giant/src/: main.ts  styles.css
ng2ts/giant/src/app/: app.component.ts
others/inferno/: .gitignore  README.md  package.json  webpack.config.js
others/inferno/src/: index.html  index.tsx
others/inferno/src/components/: Incrementer.tsx
others/ng2ts/giant/: .gitignore  build
others/ng2ts/giant/src/: index.html  main.ts  styles.css
others/ng2ts/giant/src/app/: README.md
web/: giant.dart  giant.html  index.html  main.css
